--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "psd2fgui": "./convert.js"
     },
     "scripts": {
-        "test":"node convert.js test/test.psd"
+        "test": "node convert.js test/test.psd"
     },
     "homepage": "http://www.fairygui.com",
     "repository": {
@@ -20,8 +20,11 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@types/fs-extra": "^9.0.8",
+        "@types/node": "^14.14.31",
         "archiver": "^2.1.1",
         "fs-extra": "^6.0.1",
+        "globby": "^11.0.2",
         "path": "^0.12.7",
         "psd": "^3.2.0",
         "xmlbuilder": "^10.0.0"
